test/libhyperion/syntaxTests/nameAndTypeResolution/411_string_literal_not_convertible_to_address_as_return_value.hyp
// A previous implementation claimed the string would be an address
contract AddrString {
    function f() public returns (address) {
        return "Z621c4C2d31BA544412829F2C00360f4c4419E4aDFa2e4ed1";
   }
}
// ----
// TypeError 6359: (149-192): Return argument type literal_string "Z621c4C2d31BA544412829F2C00360f4c4419E4aDFa2e4ed1" is not implicitly convertible to expected type (type of first return variable) address.
